--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=VT323&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=VT323&display=swap");
 
 body {
   margin: 20px;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   color: #333;
 }
 a {
@@ -32,7 +32,18 @@ nav h1 {
   grid-template-columns: 1fr 1fr;
   gap: 30px;
 }
-.offers, .products {
+.offers,
+.products {
   display: flex;
   gap: 20px;
+}
+.card {
+  margin: 0 auto;
+  background-color: whitesmoke;
+  padding: 2rem 4rem;
+  width: 500px;
+}
+.card p {
+  padding: 1rem;
+  line-height: 150%;
 }
